<resources>
    <string name="app_name">MakeMyNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="makemynotes">SimpleTasksApp</string>
    <string name="desc_all">Organize every tasks and make <font color="#E5E4E8">your tasks work for you -</font> capture every detail, all in one place.</string>
    <string name="login">Create New Task</string>
    <string name="mynotes">My\nTasks</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="search">Search...</string>
    <string name="delete_all">Delete All</string>
    <string name="logout">Logout</string>

</resources>